[project]
name = "streamlit-challenge"
version = "0.1.0"
description = "Hello Streamlit Pro — layout base, tema, estado e componentes simples."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "streamlit>=1.49.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"